hphp/hack/test/typecheck/this_tparam_static.php.legacy_decl.exp
File "this_tparam_static.php", line 13, characters 19-22:
The type `this` cannot be used as a constraint on a class generic, or as the type of a static member variable (Naming[2043])
File "this_tparam_static.php", line 18, characters 23-28:
Can't use `new static()` for `BadClass`; `__construct` arguments are not guaranteed to be consistent in child classes (Typing[4060])
  File "this_tparam_static.php", line 12, characters 7-14:
  This declaration is neither `final` nor uses the `<<__ConsistentConstruct>>` attribute
File "this_tparam_static.php", line 19, characters 7-33:
Invalid assignment (Typing[4110])
  File "this_tparam_static.php", line 13, characters 18-22:
  Expected `?BadClass`
  File "this_tparam_static.php", line 18, characters 23-28:
  But got `this as BadClass`
File "this_tparam_static.php", line 21, characters 12-20:
Invalid return type (Typing[4110])
  File "this_tparam_static.php", line 15, characters 41-44:
  Expected `this`
  File "this_tparam_static.php", line 13, characters 19-22:
  But got `BadClass`
  File "this_tparam_static.php", line 16, characters 17-20:
    where the class `BadClass` was referenced here via the keyword `self`
